# question-generator

./: Cargo.toml  todo.md
src/: lib.rs  main.rs
src/generator/: arithmetic.rs  maths.rs
src/strategy/: arithmetic.rs
src/strategy/arithmetic/: addition.rs  subtraction.rs
