[package]
name = "question-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3", optional = true }
poem-openapi = { version = "5", features = ["swagger-ui"], optional = true }
rand = "0.10"
serde = { version = "1.0.228", optional = true }
strum = "0.28.0"
strum_macros = "0.28.0"

[features]
poem = [ "dep:poem", "dep:poem-openapi", "dep:serde" ]
